[Update] マイページにカレンダー表示

--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -1,1 +1,7 @@
-<h1>MyPage</h1>
+<div class="container">
+  <div class="row-12">
+    <div id="calendar"></div>
+  </div>
+  <%= javascript_pack_tag 'calendar' %>
+</div>
+
