--- a/app/views/public/tasks/new.html.erb
+++ b/app/views/public/tasks/new.html.erb
@@ -1,9 +1,33 @@
 <div class="container">
+  <% @tags.each do |tag| %>
+    <div class="<%= tag.color %> tag">
+      <%= tag.name %>
+    </div>
+  <% end %>
   <%= form_with model: @tag, url: tags_path, method: :post do |f| %>
     <%= f.label :name %>
     <%= f.text_field :name %>
     <%= f.select :color, [["赤色", "red"], ["青色", "blue"], ["黄色", "yellow"]] %>
     <%= f.submit '追加' %>
+  <% end %>
+
+
+  <h1>タスクの作成</h1>
+  <%= form_with model: @task, url: tasks_path, method: :post do |f| %>
+    <div class="form-group">
+      <%= f.label :title, "TITLE" %>
+      <%= f.text_field :title %>
+    </div>
+    <%= f.label :content %>
+    <%= f.text_area :content %><br>
+    <%= f.hidden_field :assigned_person, :value => current_user.id %>
+    <%= f.label :start_time %>
+    <%= f.date_field :start_time %>
+    <%= f.label :end_time %>
+    <%= f.date_field :end_time %><br>
+    <%= f.select :tag_id, options_from_collection_for_select(current_user.tags.all, :id, :name) %>
+    <%= f.hidden_field :user_id, :value => current_user.id %>
+    <%= f.submit "保存する" %>
   <% end %>
 
 
