--- a/app/views/public/tasks/new.html.erb
+++ b/app/views/public/tasks/new.html.erb
@@ -25,7 +25,7 @@
     <%= f.date_field :start_time %>
     <%= f.label :end_time %>
     <%= f.date_field :end_time %><br>
-    <%= f.select :tag_id, options_from_collection_for_select(current_user.tags.all, :id, :name) %>
+    <%= f.select :tag_id, options_from_collection_for_select(current_user.tags.all, :id, :name) %><br>
     <%= f.hidden_field :user_id, :value => current_user.id %>
     <%= f.submit "保存する" %>
   <% end %>
