--- a/app/javascript/stylesheets/calendar.css
+++ b/app/javascript/stylesheets/calendar.css
@@ -14,12 +14,12 @@
   background-color: #ffff00;
 }
 
-.button-container-calendar button {
+.allow {
+  margin-right: 15px;
+  margin-left: 15px;
   cursor: pointer;
   display: inline-block;
   zoom: 1;
-  background: #00a2b7;
-  color: #fff;
   border: 1px solid #0aa2b5;
   border-radius: 4px;
   padding: 5px 10px;
