--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,4 +6,5 @@
   <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
   <%= link_to "チーム", groups_path %>
   <%= link_to "カスタム", users_information_edit_path %>
+  <%= link_to "カレンダーテスト", users_calendar_test_path %>
 </header>
