--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -6,7 +6,7 @@
     <input type="button" value=">" id="next" class="col-1 text-right allow btn btn-outline-dark">
   </div>
 
-  <table class="table-calendar table vh-100" id="calendar" data-lang="ja">
+  <table class="table-calendar-frame table vh-100" id="calendar" data-lang="ja">
     <thead id="thead-month"></thead>
     <tbody id="calendar-body"></tbody>
   </table>
