--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -1,10 +1,10 @@
 <div class="container container-calendar">
-  <%= link_to "新規作成", new_task_path %>
-  <div class="button-container-calendar row">
-    <input type="button" value="<" id="previous" class="col-1 text-left allow btn btn-outline-dark">
-    <h4 id="monthAndYear" class="col text-center"></h4>
-    <input type="button" value=">" id="next" class="col-1 text-right allow btn btn-outline-dark">
-  </div>
+  <!--<%= link_to "新規作成", new_task_path %>-->
+  <!--<div class="button-container-calendar row">-->
+  <!--  <input type="button" value="<" id="previous" class="col-1 text-left allow btn btn-outline-dark">-->
+  <!--  <h4 id="monthAndYear" class="col text-center"></h4>-->
+  <!--  <input type="button" value=">" id="next" class="col-1 text-right allow btn btn-outline-dark">-->
+  <!--</div>-->
 
   <table class="table-calendar-frame table vh-100" id="calendar" data-lang="ja">
     <thead id="thead-month"></thead>
