--- a/app/views/public/users/calendar_test.html.erb
+++ b/app/views/public/users/calendar_test.html.erb
@@ -1,12 +1,60 @@
 <div id="container" class="locale-ja container">
+
+  <%= link_to "新規作成", new_task_path %>
+  <div class="button-container-calendar row">
+    <input type="button" value="<" id="previous" class="col-1 text-left allow btn btn-outline-dark">
+    <h4 id="monthAndYear" class="col text-center"></h4>
+    <input type="button" value=">" id="next" class="col-1 text-right allow btn btn-outline-dark">
+  </div>
+
   <div class="calendar-container">
     <div class="mv-container">
       <table cellpadding="0" cellspacing="0" class="mv-daynames-table row-10" id="myDaynamesTable">
       </table>
-      <div class="mv-event-container vh-100" id="mvEventContainer2"></div>
+      <div class="mv-event-container" id="mvEventContainer2"></div>
     </div>
   </div>
 </div>
+
+<div class="footer-container-calendar text-center">
+  <label for="month">日付指定：</label>
+  <select id="month" onchange="jump()">
+    <option value=0>1月</option>
+    <option value=1>2月</option>
+    <option value=2>3月</option>
+    <option value=3>4月</option>
+    <option value=4>5月</option>
+    <option value=5>6月</option>
+    <option value=6>7月</option>
+    <option value=7>8月</option>
+    <option value=8>9月</option>
+    <option value=9>10月</option>
+    <option value=10>11月</option>
+    <option value=11>12月</option>
+  </select>
+  <select id="year" onchange="jump()"></select>
+</div>
+
+<% task = [] %>
+<%tasks = [] %>
+<% @tasks.each do |t| %>
+  <% task << t.start_time.year %>   <!--0-->
+  <% task << t.start_time.month %>  <!--1-->
+  <% task << t.start_time.day %>    <!--2-->
+  <% task << t.end_time.year %>     <!--3-->
+  <% task << t.end_time.month %>    <!--4-->
+  <% task << t.end_time.day %>      <!--5-->
+  <% task << t.tag.name %>          <!--6-->
+  <% task << t.tag.color %>         <!--7-->
+  <% tasks << task %>
+  <% task = [] %>
+<% end %>
+
+<%# tasks.each do |f| %>
+  <%#= f[0] %>
+<%# end %>
+
+<div id="tasks" data-task-status="<%= tasks.to_json %>"></div>
 
 
 <%= javascript_pack_tag 'calendar_test' %>
