[Update] 予定書き込み不具合あり

--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -41,11 +41,12 @@
   <% task << t.start_time.year %>   <!--0-->
   <% task << t.start_time.month %>  <!--1-->
   <% task << t.start_time.day %>    <!--2-->
-  <% task << t.end_time.year %>     <!--3-->
-  <% task << t.end_time.month %>    <!--4-->
-  <% task << t.end_time.day %>      <!--5-->
-  <% task << t.tag.name %>          <!--6-->
-  <% task << t.tag.color %>         <!--7-->
+  <% task << t.start_time.wday %>   <!--3-->
+  <% task << t.end_time.year %>     <!--4-->
+  <% task << t.end_time.month %>    <!--5-->
+  <% task << t.end_time.day %>      <!--6-->
+  <% task << t.tag.name %>          <!--7-->
+  <% task << t.tag.color %>         <!--8-->
   <% tasks << task %>
   <% task = [] %>
 <% end %>
