--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -45,8 +45,11 @@
   <% task << t.end_time.year %>     <!--4-->
   <% task << t.end_time.month %>    <!--5-->
   <% task << t.end_time.day %>      <!--6-->
-  <% task << t.tag.name %>          <!--7-->
-  <% task << t.tag.color %>         <!--8-->
+  <% task << t.end_time.wday %>     <!--7-->
+  <% task_span = t.end_time.day - t.start_time.day %>
+  <% task << task_span %>           <!--8-->
+  <% task << t.title %>             <!--9-->
+  <% task << t.tag.color %>         <!--10-->
   <% tasks << task %>
   <% task = [] %>
 <% end %>
