--- a/app/views/public/groups/index.html.erb
+++ b/app/views/public/groups/index.html.erb
@@ -1,1 +1,13 @@
+<%= link_to "新規グループ作成", new_group_path %>
 <h1>チーム一覧</h1>
+<% @groups.each do |group| %>
+  <span>グループ名： </span>
+  <span><%= group.name %></span><br>
+  <% group.users.each do |user| %>
+    <span>そのグループに所属するユーザー名： </span>
+    <span><%= user.name %></span>
+  <% end %>
+  <%= link_to group_path(group.id) do %>
+    <%= group.name %>へ
+  <% end %>
+<% end %>
