[Update]グループ招待機能・通知機能

--- a/app/views/public/groups/show.html.erb
+++ b/app/views/public/groups/show.html.erb
@@ -1,6 +1,6 @@
 <h1><%= @group.name %></h1>
 
-<% if @other_users.exits? %>
+<% if @other_users.present? %>
   <%= form_with model: @user, url: invitation_group_path(@group), method: :post, local: true do |f| %>
     <%= f.collection_select :user_id, @other_users, :id, :name %>
     <%= f.submit "招待する" %>
