--- a/app/views/public/notifications/_notification.html.erb
+++ b/app/views/public/notifications/_notification.html.erb
@@ -1,4 +1,4 @@
 <% if notification.action == "invitation" %>
   <%= notification.visitor.name %>さんからチームへの招待が届きました。
-  <%= link_to "参加する", join_group_path(notification.group_id) %>
+  <%= link_to "参加する", group_confirm_path(notification.group_id) %>
 <% end %>
