--- a/app/views/public/group_tasks/new.html.erb
+++ b/app/views/public/group_tasks/new.html.erb
@@ -2,6 +2,7 @@
   <% @tags.each do |tag| %>
     <div class="<%= tag.color %> tag">
       <%= tag.name %>
+      <%= link_to "削除", group_tag_path(tag.id), method: :delete, data: {confirm: "タグを削除するとタグが付いているタスクも削除されます。それでも削除しますか？"} %>
     </div>
   <% end %>
   <h1>グループのタグの作成</h1>
