--- a/app/javascript/stylesheets/calendar.css
+++ b/app/javascript/stylesheets/calendar.css
@@ -106,3 +106,9 @@ table {
 .right-round {
   border-radius: 0 10px 10px 0;
 }
+
+#today-box {
+  width: 100%;
+  height: 300px;
+  border: 1px solid black;
+}
