--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -1,29 +1,27 @@
 <div id="container" class="container">
 
-  <div class="button-container-calendar row">
-    <input type="button" value="<" id="day-previous" class="col-1 text-left allow btn btn-outline-dark">
-    <div id="today-box" class="my-3 text-cente col-9"></div>
-    <input type="button" value=">" id="day-next" class="col-1 text-right allow btn btn-outline-dark">
-  </div>
-
-
-  <%= link_to "新規作成", new_task_path %>
-  <div class="button-container-calendar row">
-    <input type="button" value="<" id="previous" class="col-1 text-left allow btn btn-outline-dark">
-    <h4 id="monthAndYear" class="col text-center"></h4>
-    <input type="button" value=">" id="next" class="col-1 text-right allow btn btn-outline-dark">
-  </div>
-
-  <div class="calendar-container">
-    <div class="mv-container">
-      <table cellpadding="0" cellspacing="0" class="mv-daynames-table row-10" id="myDaynamesTable">
-      </table>
-      <div class="mv-event-container" id="mvEventContainer2"></div>
+  <div class="button-container-calendar row day-box">
+    <div class="col-1 p-0 allow-box">
+      <input type="button" value="<" id="day-previous" class="text-center btn btn-outline-dark allow">
+    </div>
+    <div id="today-box" class="my-3 mx-0 text-cente col-10 pt-3"></div>
+    <div class="col-1 p-0 text-right allow-box">
+      <input type="button" value=">" id="day-next" class="text-center btn btn-outline-dark allow">
     </div>
   </div>
-</div>
 
-<div class="footer-container-calendar text-center">
+  <%= link_to "新規作成", new_task_path %>
+  <div class="button-container-calendar row mb-3 day-box">
+    <div class="col-1 p-0">
+      <input type="button" value="<" id="previous" class="text-center btn btn-outline-dark allow">
+    </div>
+    <h4 id="monthAndYear" class="col-10 text-center my-3 mx-0 "></h4>
+    <div class="col-1 p-0 text-right">
+      <input type="button" value=">" id="next" class="text-center btn btn-outline-dark allow">
+    </div>
+  </div>
+
+  <div class="footer-container-calendar text-center">
   <label for="month">日付指定：</label>
   <select id="month" onchange="jump()">
     <option value=0>1月</option>
@@ -41,6 +39,16 @@
   </select>
   <select id="year" onchange="jump()"></select>
 </div>
+
+  <div class="calendar-container">
+    <div class="mv-container">
+      <table cellpadding="0" cellspacing="0" class="mv-daynames-table row-10" id="myDaynamesTable">
+      </table>
+      <div class="mv-event-container" id="mvEventContainer2"></div>
+    </div>
+  </div>
+</div>
+
 
 <% task = [] %>
 <% tasks = [] %>
