--- a/app/javascript/stylesheets/calendar.css
+++ b/app/javascript/stylesheets/calendar.css
@@ -19,15 +19,21 @@
   background-color: #ffff00;
 }
 
+.day-box {
+  margin-right: 0px;
+  margin-left: 0px;
+}
+
+.allow-box {
+  line-height: 332px;
+}
+
+
+
 .allow {
-  margin-right: 15px;
-  margin-left: 15px;
-  cursor: pointer;
-  display: inline-block;
-  zoom: 1;
-  border: 1px solid #0aa2b5;
-  border-radius: 4px;
-  padding: 5px 10px;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
 }
 
 .mv-daynames-table {
