[Update] 日付リンク化エラーあり

--- a/app/javascript/stylesheets/calendar.css
+++ b/app/javascript/stylesheets/calendar.css
@@ -43,6 +43,12 @@
   width: 100%;
 }
 
+.widelink {
+  display: block;
+  color: black;
+  text-decoration-line: none;
+}
+
 /*.mv-container {*/
 /*  height: 100%;*/
 /*  position: relative;*/
