[Update] カレンダーの日付をクリックしたらその日の予定

--- a/app/views/public/groups/show.html.erb
+++ b/app/views/public/groups/show.html.erb
@@ -14,7 +14,7 @@
 
 <div id="container" class="container">
 
-  <div class="button-container-calendar row day-box" id="#">
+  <div class="button-container-calendar row day-box">
     <div class="col-1 p-0 allow-box">
       <input type="button" value="<" id="day-previous" class="text-center btn btn-outline-dark allow">
     </div>
