--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,7 +3,7 @@
   <%= link_to "アバウト", about_path %>
   <%= link_to "新規登録", new_user_registration_path %>
   <%= link_to "ログイン", new_user_session_path %>
-  <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+  <%= link_to "ログアウト", destroy_user_session_path %>
   <%= link_to "チーム", groups_path %>
   <%= link_to "カスタム", users_information_edit_path %>
   <%= link_to "通知", notifications_path %>
