--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Canvas</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="viewport" content="width=device-width,initial-scale=1, maximum-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -11,7 +11,9 @@
   </head>
 
   <body>
-    <%= render "layouts/header" %>
+    <header class="shadow mb-5">
+      <%= render "layouts/header" %>
+    </header>
     <%= yield %>
   </body>
 </html>
