--- a/app/views/public/groups/show.html.erb
+++ b/app/views/public/groups/show.html.erb
@@ -12,7 +12,7 @@
 <% end %>
 
 
-<div id="container" class="container">
+<div id="container" class="container mb-5">
 
   <div class="button-container-calendar row day-box">
     <div class="col-1 p-0 allow-box">
