--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -1,4 +1,4 @@
-<div id="container" class="container">
+<div id="container" class="container mb-5">
 
   <div class="button-container-calendar row day-box" id="#">
     <div class="col-1 p-0 allow-box">
