[Update] 予定の表示の修正

--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -67,6 +67,7 @@
   <% task << t.tag.color %>         <!--10-->
   <% task << t.tag.name %>          <!--11-->
   <% task << t.content %>           <!---12-->
+  <% task << t.id %>                <!---13-->
   <% tasks << task %>
   <% task = [] %>
 <% end %>
