--- a/app/views/public/groups/show.html.erb
+++ b/app/views/public/groups/show.html.erb
@@ -81,6 +81,7 @@
   <% task << t.tag.color %>         <!--10-->
   <% task << t.tag.name %>          <!--11-->
   <% task << t.content %>           <!--12-->
+  <% task << t.id %>                <!--13-->
   <% tasks << task %>
   <% task = [] %>
 <% end %>
