--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,7 +11,7 @@
             <%= link_to "マイページ", users_my_page_path, class: 'nav-link text-dark' %>
           </li>
           <li class="nav-item ml-3">
-            <%= link_to "チーム", groups_path, class: 'nav-link text-dark' %>
+            <%= link_to "グループ", groups_path, class: 'nav-link text-dark' %>
           </li>
           <li class="nav-item ml-3">
             <%= link_to "カスタム", users_information_edit_path, class: 'nav-link text-dark' %>
