--- a/app/views/public/groups/chat.html.erb
+++ b/app/views/public/groups/chat.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
 
-  <h1>チャットルーム</h1>
+  <h4 class="text-center">チャットルーム</h4>
 
   <%= form_with model: @message, url: messages_path, method: :post do |f| %>
     <%= f.label :message, "メッセージ" %>
