--- a/app/views/public/groups/new.html.erb
+++ b/app/views/public/groups/new.html.erb
@@ -1,8 +1,10 @@
-<h1>チーム作成画面</h1>
-<%= form_with model: @group do |f| %>
-  <%= f.label :name, "グループ名" %>
-  <%= f.text_field :name %><br>
-  <%= f.label :password, "パスワード" %>
-  <%= f.text_field :password %><br>
-  <%= f.submit '作成' %>
-<% end %>
+<div class="container">
+  <h4 class="mb-3">チーム作成画面</h4>
+  <%= form_with model: @group do |f| %>
+    <%= f.label :name, "グループ名" %>
+    <%= f.text_field :name %><br>
+    <%= f.label :password, "パスワード" %>
+    <%= f.text_field :password %><br>
+    <%= f.submit '作成' %>
+  <% end %>
+</div>
