--- a/app/views/public/users/out_check.html.erb
+++ b/app/views/public/users/out_check.html.erb
@@ -1,8 +1,10 @@
-<h1>退会確認画面</h1>
-退会をクリックすると退会することになります
-<%= link_to "戻る", users_my_page_path %>
+<div class="container">
+  <h4>退会確認画面</h4>
+  退会をクリックすると退会することになります<br>
+  <%= link_to "戻る", users_my_page_path %>
 
-<%= form_with model: @user, url: users_out_path, method: :patch do |f| %>
-  <%= f.hidden_field :status, :value => "true" %>
-  <%= f.submit "退会する" %>
-<% end %>
+  <%= form_with model: @user, url: users_out_path, method: :patch do |f| %>
+    <%= f.hidden_field :status, :value => "true" %>
+    <%= f.submit "退会する" %>
+  <% end %>
+</div>
