--- a/app/views/public/groups/chat.html.erb
+++ b/app/views/public/groups/chat.html.erb
@@ -14,11 +14,13 @@
     <% if message.user.id == current_user.id %>
       <div class="text-right mt-3">
         <%= message.user.name %>
+        <%= message.created_at %>
         <%= message.message %>
       </div>
     <% else %>
       <div class="text-left mt-3">
         <%= message.user.name %>
+        <%= message.created_at %>
         <%= message.message %>
       </div>
     <% end %>
