--- a/app/views/public/tasks/new.html.erb
+++ b/app/views/public/tasks/new.html.erb
@@ -1,33 +1,44 @@
 <div class="container">
-  <% @tags.each do |tag| %>
-    <div class="<%= tag.color %> tag">
-      <%= tag.name %>
-      <%= link_to "削除", tag_path(tag.id), method: :delete, data: {confirm: "タグを削除するとタグが付いているタスクも削除されます。それでも削除しますか？"} %>
+  <div class="row">
+    <div class="mx-auto">
+      <% @tags.each do |tag| %>
+        <div class="<%= tag.color %> tag">
+          <%= tag.name %>
+          <%= link_to "削除", tag_path(tag.id), method: :delete, data: {confirm: "タグを削除するとタグが付いているタスクも削除されます。それでも削除しますか？"} %>
+        </div>
+      <% end %>
     </div>
-  <% end %>
+  </div>
 
-  <%= form_with model: @tag, url: tags_path, method: :post do |f| %>
-    <%= f.label :name %>
-    <%= f.text_field :name %>
-    <%= f.select :color, [["赤色", "red"], ["青色", "blue"], ["黄色", "yellow"]] %>
-    <%= f.submit '追加' %>
-  <% end %>
-
-
-  <h1>タスクの作成</h1>
-  <%= form_with model: @task, url: tasks_path, method: :post do |f| %>
-    <div class="form-group">
-      <%= f.label :title, "TITLE" %>
-      <%= f.text_field :title %>
+  <div class="row">
+    <div class="mx-auto">
+      <%= form_with model: @tag, url: tags_path, method: :post do |f| %>
+        <%= f.label :name %>
+        <%= f.text_field :name %>
+        <%= f.select :color, [["赤色", "red"], ["青色", "blue"], ["黄色", "yellow"]] %>
+        <%= f.submit '追加' %>
+      <% end %>
     </div>
-    <%= f.label :content %>
-    <%= f.text_area :content %><br>
-    <%= f.hidden_field :assigned_person, :value => current_user.id %>
-    <%= f.label :start_time %>
-    <%= f.date_field :start_time %>
-    <%= f.label :end_time %>
-    <%= f.date_field :end_time %><br>
-    <%= f.select :tag_id, options_from_collection_for_select(current_user.tags.all, :id, :name) %><br>
-    <%= f.submit "保存する" %>
-  <% end %>
+  </div>
+
+  <div class="row">
+    <div class="mx-auto">
+      <h4>タスクの作成</h4>
+      <%= form_with model: @task, url: tasks_path, method: :post do |f| %>
+        <div class="form-group">
+          <%= f.label :title, "TITLE" %>
+          <%= f.text_field :title %>
+        </div>
+        <%= f.label :content %>
+        <%= f.text_area :content %><br>
+        <%= f.hidden_field :assigned_person, :value => current_user.id %>
+        <%= f.label :start_time %>
+        <%= f.date_field :start_time %>
+        <%= f.label :end_time %>
+        <%= f.date_field :end_time %><br>
+        <%= f.select :tag_id, options_from_collection_for_select(current_user.tags.all, :id, :name) %><br>
+        <%= f.submit "保存する" %>
+      <% end %>
+    </div>
+  </div>
 </div>
