--- a/app/javascript/stylesheets/calendar.css
+++ b/app/javascript/stylesheets/calendar.css
@@ -124,3 +124,87 @@ table {
   height: 300px;
   border: 1px solid black;
 }
+
+.color-box {
+  position:relative;
+  width: 240px; /* 直径 */
+  height: 240px; /* 直径 */
+  text-align: center;
+  margin: 0;
+}
+
+.color-box span {
+  position: absolute;
+  top: 0;
+  left: calc(50% - 20px); /* 中心点、、円のサイズ分ずらす */
+  display: inline-block;
+  width: 40px;
+  height: 120px; /* 半径 */
+  transform-origin: center bottom;
+}
+
+.tag-color {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin: 5px;
+  border: none;
+}
+
+.s-color {
+  position: absolute;
+  top: 70px;
+  left: 70px;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+}
+
+.color-box span:nth-child(1) {
+  transform: rotate(0deg);
+}
+
+.color-box span:nth-child(2) {
+  transform: rotate(30deg);
+}
+
+.color-box span:nth-child(3) {
+  transform: rotate(60deg);
+}
+
+.color-box span:nth-child(4) {
+  transform: rotate(90deg);
+}
+
+.color-box span:nth-child(5) {
+  transform: rotate(120deg);
+}
+
+.color-box span:nth-child(6) {
+  transform: rotate(150deg);
+}
+
+.color-box span:nth-child(7) {
+  transform: rotate(180deg);
+}
+
+.color-box span:nth-child(8) {
+  transform: rotate(210deg);
+}
+
+.color-box span:nth-child(9) {
+  transform: rotate(240deg);
+}
+
+.color-box span:nth-child(10) {
+  transform: rotate(270deg);
+}
+
+.color-box span:nth-child(11) {
+  transform: rotate(300deg);
+}
+
+.color-box span:nth-child(12) {
+  transform: rotate(330deg);
+}
+
